--- a/src/components/Pages/Testimonials/Testimonials.css
+++ b/src/components/Pages/Testimonials/Testimonials.css
@@ -16,6 +16,7 @@
 }
 
 .TestimonialsContainer{
+    min-height: 100vh;
     width: 100vw;
     margin-top: 11rem;
     cursor: row-resize;
